// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`list view DOM > renders a single event 1`] = `
"<table class=" day-table today ">
<tr>
<td style="position: relative;" class="date-column " rowspan="1">
<div class="weekday" style="font-size:14px;color:var(--primary-text-color);">
      Wed
    </div>
<div class="day" style="font-size:26px;color:var(--primary-text-color);">
      17
    </div>
<div class="month" style="font-size:12px;color:var(--primary-text-color);">
            Jun
          </div>
</td>
<td class=" event event-first event-last " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Upcoming one-to-one
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>2:00 PM - 3:00 PM</span>
</div>
</div>
</div>
</div>
</td>
</tr>
</table>"
`;

exports[`list view DOM > renders an empty calendar 1`] = `
"<table class=" day-table today ">
<tr>
<td style="position: relative;" class="date-column " rowspan="1">
<div class="weekday" style="font-size:14px;color:var(--primary-text-color);">
      Wed
    </div>
<div class="day" style="font-size:26px;color:var(--primary-text-color);">
      17
    </div>
<div class="month" style="font-size:12px;color:var(--primary-text-color);">
            Jun
          </div>
</td>
<td class=" event event-first event-last " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title empty-day-title" style="color: var(--calendar-card-empty-day-color)">
          ✓ No upcoming events
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
</div>
</div>
</td>
</tr>
</table>"
`;

exports[`list view DOM > renders compact mode 1`] = `
"<table class=" day-table today ">
<tr>
<td style="position: relative;" class="date-column " rowspan="3">
<div class="weekday" style="font-size:14px;color:var(--primary-text-color);">
      Wed
    </div>
<div class="day" style="font-size:26px;color:var(--primary-text-color);">
      17
    </div>
<div class="month" style="font-size:12px;color:var(--primary-text-color);">
            Jun
          </div>
</td>
<td class=" event event-first " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Public holiday
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>All day</span>
</div>
</div>
</div>
</div>
</td>
</tr>
<tr>
<td class=" event event-middle " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Currently running review
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>9:30 AM - 11:00 AM</span>
</div>
</div>
</div>
</div>
</td>
</tr>
<tr>
<td class=" event event-last " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Upcoming one-to-one
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>2:00 PM - 3:00 PM</span>
</div>
</div>
</div>
</div>
</td>
</tr>
</table>"
`;

exports[`list view DOM > renders empty days when show_empty_days is on 1`] = `
"<table class=" day-table today ">
<tr>
<td style="position: relative;" class="date-column " rowspan="1">
<div class="weekday" style="font-size:14px;color:var(--primary-text-color);">
      Wed
    </div>
<div class="day" style="font-size:26px;color:var(--primary-text-color);">
      17
    </div>
<div class="month" style="font-size:12px;color:var(--primary-text-color);">
            Jun
          </div>
</td>
<td class=" event event-first event-last " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Upcoming one-to-one
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>2:00 PM - 3:00 PM</span>
</div>
</div>
</div>
</div>
</td>
</tr>
</table>
<table class=" day-table tomorrow future-day ">
<tr>
<td style="position: relative;" class="date-column " rowspan="1">
<div class="weekday" style="font-size:14px;color:var(--primary-text-color);">
      Thu
    </div>
<div class="day" style="font-size:26px;color:var(--primary-text-color);">
      18
    </div>
<div class="month" style="font-size:12px;color:var(--primary-text-color);">
            Jun
          </div>
</td>
<td class=" event event-first event-last " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title empty-day-title" style="color: var(--calendar-card-empty-day-color)">
          ✓ No upcoming events
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
</div>
</div>
</td>
</tr>
</table>
<table class=" day-table future-day ">
<tr>
<td style="position: relative;" class="date-column " rowspan="1">
<div class="weekday" style="font-size:14px;color:var(--primary-text-color);">
      Fri
    </div>
<div class="day" style="font-size:26px;color:var(--primary-text-color);">
      19
    </div>
<div class="month" style="font-size:12px;color:var(--primary-text-color);">
            Jun
          </div>
</td>
<td class=" event event-first event-last " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title empty-day-title" style="color: var(--calendar-card-empty-day-color)">
          ✓ No upcoming events
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
</div>
</div>
</td>
</tr>
</table>"
`;

exports[`list view DOM > renders in a non-English language 1`] = `
"<table class=" day-table today ">
<tr>
<td style="position: relative;" class="date-column " rowspan="4">
<div class="weekday" style="font-size:14px;color:var(--primary-text-color);">
      Mi
    </div>
<div class="day" style="font-size:26px;color:var(--primary-text-color);">
      17
    </div>
<div class="month" style="font-size:12px;color:var(--primary-text-color);">
            Jun
          </div>
</td>
<td class=" event event-first " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Public holiday
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>Ganztägig</span>
</div>
</div>
</div>
</div>
</td>
</tr>
<tr>
<td class=" event event-middle " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Currently running review
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>9:30 AM - 11:00 AM</span>
</div>
</div>
</div>
</div>
</td>
</tr>
<tr>
<td class=" event event-middle " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Upcoming one-to-one
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>2:00 PM - 3:00 PM</span>
</div>
</div>
</div>
</div>
</td>
</tr>
<tr>
<td class=" event event-last " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Dentist
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>4:00 PM - 5:00 PM</span>
</div>
</div>
<div class="location">
<ha-icon icon="mdi:map-marker-outline"></ha-icon>
<span>12 High Street</span>
</div>
</div>
</div>
</td>
</tr>
</table>
<table class=" day-table tomorrow future-day ">
<tr>
<td style="position: relative;" class="date-column " rowspan="1">
<div class="weekday" style="font-size:14px;color:var(--primary-text-color);">
      Do
    </div>
<div class="day" style="font-size:26px;color:var(--primary-text-color);">
      18
    </div>
<div class="month" style="font-size:12px;color:var(--primary-text-color);">
            Jun
          </div>
</td>
<td class=" event event-first event-last " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Conference
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>Ganztägig, bis 19. Jun</span>
</div>
</div>
</div>
</div>
</td>
</tr>
</table>
<table class=" day-table future-day ">
<tr>
<td style="position: relative;" class="date-column " rowspan="1">
<div class="weekday" style="font-size:14px;color:var(--primary-text-color);">
      Fr
    </div>
<div class="day" style="font-size:26px;color:var(--primary-text-color);">
      19
    </div>
<div class="month" style="font-size:12px;color:var(--primary-text-color);">
            Jun
          </div>
</td>
<td class=" event event-first event-last " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Delivery window
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>10:00 AM - 10:30 AM</span>
</div>
</div>
</div>
</div>
</td>
</tr>
</table>"
`;

exports[`list view DOM > renders location and end time when enabled 1`] = `
"<table class=" day-table today ">
<tr>
<td style="position: relative;" class="date-column " rowspan="4">
<div class="weekday" style="font-size:14px;color:var(--primary-text-color);">
      Wed
    </div>
<div class="day" style="font-size:26px;color:var(--primary-text-color);">
      17
    </div>
<div class="month" style="font-size:12px;color:var(--primary-text-color);">
            Jun
          </div>
</td>
<td class=" event event-first " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Public holiday
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>All day</span>
</div>
</div>
</div>
</div>
</td>
</tr>
<tr>
<td class=" event event-middle " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Currently running review
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>9:30 AM - 11:00 AM</span>
</div>
</div>
</div>
</div>
</td>
</tr>
<tr>
<td class=" event event-middle " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Upcoming one-to-one
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>2:00 PM - 3:00 PM</span>
</div>
</div>
</div>
</div>
</td>
</tr>
<tr>
<td class=" event event-last " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Dentist
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>4:00 PM - 5:00 PM</span>
</div>
</div>
<div class="location">
<ha-icon icon="mdi:map-marker-outline"></ha-icon>
<span>12 High Street</span>
</div>
</div>
</div>
</td>
</tr>
</table>
<table class=" day-table tomorrow future-day ">
<tr>
<td style="position: relative;" class="date-column " rowspan="1">
<div class="weekday" style="font-size:14px;color:var(--primary-text-color);">
      Thu
    </div>
<div class="day" style="font-size:26px;color:var(--primary-text-color);">
      18
    </div>
<div class="month" style="font-size:12px;color:var(--primary-text-color);">
            Jun
          </div>
</td>
<td class=" event event-first event-last " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Conference
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>All day, until Jun 19</span>
</div>
</div>
</div>
</div>
</td>
</tr>
</table>
<table class=" day-table future-day ">
<tr>
<td style="position: relative;" class="date-column " rowspan="1">
<div class="weekday" style="font-size:14px;color:var(--primary-text-color);">
      Fri
    </div>
<div class="day" style="font-size:26px;color:var(--primary-text-color);">
      19
    </div>
<div class="month" style="font-size:12px;color:var(--primary-text-color);">
            Jun
          </div>
</td>
<td class=" event event-first event-last " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Delivery window
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>10:00 AM - 10:30 AM</span>
</div>
</div>
</div>
</div>
</td>
</tr>
</table>"
`;

exports[`list view DOM > renders past events when show_past_events is on 1`] = `
"<table class=" day-table today ">
<tr>
<td style="position: relative;" class="date-column " rowspan="5">
<div class="weekday" style="font-size:14px;color:var(--primary-text-color);">
      Wed
    </div>
<div class="day" style="font-size:26px;color:var(--primary-text-color);">
      17
    </div>
<div class="month" style="font-size:12px;color:var(--primary-text-color);">
            Jun
          </div>
</td>
<td class=" event event-first " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Public holiday
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>All day</span>
</div>
</div>
</div>
</div>
</td>
</tr>
<tr>
<td class=" event event-middle past-event " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Past standup
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>8:00 AM - 9:00 AM</span>
</div>
</div>
</div>
</div>
</td>
</tr>
<tr>
<td class=" event event-middle " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Currently running review
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>9:30 AM - 11:00 AM</span>
</div>
</div>
</div>
</div>
</td>
</tr>
<tr>
<td class=" event event-middle " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Upcoming one-to-one
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>2:00 PM - 3:00 PM</span>
</div>
</div>
</div>
</div>
</td>
</tr>
<tr>
<td class=" event event-last " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Dentist
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>4:00 PM - 5:00 PM</span>
</div>
</div>
<div class="location">
<ha-icon icon="mdi:map-marker-outline"></ha-icon>
<span>12 High Street</span>
</div>
</div>
</div>
</td>
</tr>
</table>
<table class=" day-table tomorrow future-day ">
<tr>
<td style="position: relative;" class="date-column " rowspan="1">
<div class="weekday" style="font-size:14px;color:var(--primary-text-color);">
      Thu
    </div>
<div class="day" style="font-size:26px;color:var(--primary-text-color);">
      18
    </div>
<div class="month" style="font-size:12px;color:var(--primary-text-color);">
            Jun
          </div>
</td>
<td class=" event event-first event-last " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Conference
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>All day, until Jun 19</span>
</div>
</div>
</div>
</div>
</td>
</tr>
</table>
<table class=" day-table future-day ">
<tr>
<td style="position: relative;" class="date-column " rowspan="1">
<div class="weekday" style="font-size:14px;color:var(--primary-text-color);">
      Fri
    </div>
<div class="day" style="font-size:26px;color:var(--primary-text-color);">
      19
    </div>
<div class="month" style="font-size:12px;color:var(--primary-text-color);">
            Jun
          </div>
</td>
<td class=" event event-first event-last " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Delivery window
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>10:00 AM - 10:30 AM</span>
</div>
</div>
</div>
</div>
</td>
</tr>
</table>"
`;

exports[`list view DOM > renders split multi-day events 1`] = `
"<table class=" day-table today ">
<tr>
<td style="position: relative;" class="date-column " rowspan="4">
<div class="weekday" style="font-size:14px;color:var(--primary-text-color);">
      Wed
    </div>
<div class="day" style="font-size:26px;color:var(--primary-text-color);">
      17
    </div>
<div class="month" style="font-size:12px;color:var(--primary-text-color);">
            Jun
          </div>
</td>
<td class=" event event-first " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Public holiday
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>All day</span>
</div>
</div>
</div>
</div>
</td>
</tr>
<tr>
<td class=" event event-middle " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Currently running review
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>9:30 AM - 11:00 AM</span>
</div>
</div>
</div>
</div>
</td>
</tr>
<tr>
<td class=" event event-middle " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Upcoming one-to-one
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>2:00 PM - 3:00 PM</span>
</div>
</div>
</div>
</div>
</td>
</tr>
<tr>
<td class=" event event-last " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Dentist
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>4:00 PM - 5:00 PM</span>
</div>
</div>
<div class="location">
<ha-icon icon="mdi:map-marker-outline"></ha-icon>
<span>12 High Street</span>
</div>
</div>
</div>
</td>
</tr>
</table>
<table class=" day-table tomorrow future-day ">
<tr>
<td style="position: relative;" class="date-column " rowspan="1">
<div class="weekday" style="font-size:14px;color:var(--primary-text-color);">
      Thu
    </div>
<div class="day" style="font-size:26px;color:var(--primary-text-color);">
      18
    </div>
<div class="month" style="font-size:12px;color:var(--primary-text-color);">
            Jun
          </div>
</td>
<td class=" event event-first event-last " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Conference
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>All day, until Jun 19</span>
</div>
</div>
</div>
</div>
</td>
</tr>
</table>
<table class=" day-table future-day ">
<tr>
<td style="position: relative;" class="date-column " rowspan="1">
<div class="weekday" style="font-size:14px;color:var(--primary-text-color);">
      Fri
    </div>
<div class="day" style="font-size:26px;color:var(--primary-text-color);">
      19
    </div>
<div class="month" style="font-size:12px;color:var(--primary-text-color);">
            Jun
          </div>
</td>
<td class=" event event-first event-last " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Delivery window
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>10:00 AM - 10:30 AM</span>
</div>
</div>
</div>
</div>
</td>
</tr>
</table>"
`;

exports[`list view DOM > renders the default configuration 1`] = `
"<table class=" day-table today ">
<tr>
<td style="position: relative;" class="date-column " rowspan="4">
<div class="weekday" style="font-size:14px;color:var(--primary-text-color);">
      Wed
    </div>
<div class="day" style="font-size:26px;color:var(--primary-text-color);">
      17
    </div>
<div class="month" style="font-size:12px;color:var(--primary-text-color);">
            Jun
          </div>
</td>
<td class=" event event-first " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Public holiday
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>All day</span>
</div>
</div>
</div>
</div>
</td>
</tr>
<tr>
<td class=" event event-middle " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Currently running review
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>9:30 AM - 11:00 AM</span>
</div>
</div>
</div>
</div>
</td>
</tr>
<tr>
<td class=" event event-middle " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Upcoming one-to-one
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>2:00 PM - 3:00 PM</span>
</div>
</div>
</div>
</div>
</td>
</tr>
<tr>
<td class=" event event-last " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Dentist
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>4:00 PM - 5:00 PM</span>
</div>
</div>
<div class="location">
<ha-icon icon="mdi:map-marker-outline"></ha-icon>
<span>12 High Street</span>
</div>
</div>
</div>
</td>
</tr>
</table>
<table class=" day-table tomorrow future-day ">
<tr>
<td style="position: relative;" class="date-column " rowspan="1">
<div class="weekday" style="font-size:14px;color:var(--primary-text-color);">
      Thu
    </div>
<div class="day" style="font-size:26px;color:var(--primary-text-color);">
      18
    </div>
<div class="month" style="font-size:12px;color:var(--primary-text-color);">
            Jun
          </div>
</td>
<td class=" event event-first event-last " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Conference
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>All day, until Jun 19</span>
</div>
</div>
</div>
</div>
</td>
</tr>
</table>
<table class=" day-table future-day ">
<tr>
<td style="position: relative;" class="date-column " rowspan="1">
<div class="weekday" style="font-size:14px;color:var(--primary-text-color);">
      Fri
    </div>
<div class="day" style="font-size:26px;color:var(--primary-text-color);">
      19
    </div>
<div class="month" style="font-size:12px;color:var(--primary-text-color);">
            Jun
          </div>
</td>
<td class=" event event-first event-last " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Delivery window
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>10:00 AM - 10:30 AM</span>
</div>
</div>
</div>
</div>
</td>
</tr>
</table>"
`;

exports[`list view DOM > renders week numbers and separators when enabled 1`] = `
"<table class="week-row-table" style="margin-top:0px;margin-bottom:5px;">
<tr>
<td class="week-number-cell">
<div class="week-number">25</div>
</td>
<td class="separator-cell" style="--separator-display:none;">
<div class="separator-line"></div>
</td>
</tr>
</table>
<table class=" day-table today ">
<tr>
<td style="position: relative;" class="date-column " rowspan="4">
<div class="weekday" style="font-size:14px;color:var(--primary-text-color);">
      Wed
    </div>
<div class="day" style="font-size:26px;color:var(--primary-text-color);">
      17
    </div>
<div class="month" style="font-size:12px;color:var(--primary-text-color);">
            Jun
          </div>
</td>
<td class=" event event-first " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Public holiday
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>All day</span>
</div>
</div>
</div>
</div>
</td>
</tr>
<tr>
<td class=" event event-middle " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Currently running review
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>9:30 AM - 11:00 AM</span>
</div>
</div>
</div>
</div>
</td>
</tr>
<tr>
<td class=" event event-middle " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Upcoming one-to-one
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>2:00 PM - 3:00 PM</span>
</div>
</div>
</div>
</div>
</td>
</tr>
<tr>
<td class=" event event-last " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Dentist
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>4:00 PM - 5:00 PM</span>
</div>
</div>
<div class="location">
<ha-icon icon="mdi:map-marker-outline"></ha-icon>
<span>12 High Street</span>
</div>
</div>
</div>
</td>
</tr>
</table>
<div class="separator" style="border-top-width:1px;border-top-color:var(--secondary-text-color);border-top-style:solid;margin-top:0px;margin-bottom:10px;"></div>
<table class=" day-table tomorrow future-day ">
<tr>
<td style="position: relative;" class="date-column " rowspan="1">
<div class="weekday" style="font-size:14px;color:var(--primary-text-color);">
      Thu
    </div>
<div class="day" style="font-size:26px;color:var(--primary-text-color);">
      18
    </div>
<div class="month" style="font-size:12px;color:var(--primary-text-color);">
            Jun
          </div>
</td>
<td class=" event event-first event-last " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Conference
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>All day, until Jun 19</span>
</div>
</div>
</div>
</div>
</td>
</tr>
</table>
<div class="separator" style="border-top-width:1px;border-top-color:var(--secondary-text-color);border-top-style:solid;margin-top:0px;margin-bottom:10px;"></div>
<table class=" day-table future-day ">
<tr>
<td style="position: relative;" class="date-column " rowspan="1">
<div class="weekday" style="font-size:14px;color:var(--primary-text-color);">
      Fri
    </div>
<div class="day" style="font-size:26px;color:var(--primary-text-color);">
      19
    </div>
<div class="month" style="font-size:12px;color:var(--primary-text-color);">
            Jun
          </div>
</td>
<td class=" event event-first event-last " style="border-inline-start: var(--calendar-card-line-width-vertical) solid #03a9f4; background-color: ;">
<div class="event-content">
<div class="summary-row">
<div class="summary">
<span class="event-title " style="color: var(--primary-text-color)">
          Delivery window
        </span>
</div>
<!--?-->
</div>
<div class="time-location">
<div class="time">
<div class="time-actual">
<ha-icon icon="mdi:clock-outline"></ha-icon>
<span>10:00 AM - 10:30 AM</span>
</div>
</div>
</div>
</div>
</td>
</tr>
</table>"
`;
